--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,10 +24,23 @@ header h1 {
 .counter {
 	height: 120px;
 	max-width: 300px;
-	margin: 20px;
+	margin: 40px 20px;
 	text-align: center;
 	border: 1px dashed black;
 	box-shadow: 0 0 0 3px #E3BC81, 0 0 0 5px black, 0 0 0 10px #E3BC81, 0 0 2px 10px black;
+}
+
+
+#winCounter{
+    -ms-transform: rotate(-15deg); /* IE 9 */
+    -webkit-transform: rotate(-15deg); /* Safari */
+    transform: rotate(-15deg); /* Standard syntax */
+}
+
+#lossCounter{
+    -ms-transform: rotate(15deg); /* IE 9 */
+    -webkit-transform: rotate(15deg); /* Safari */
+    transform: rotate(15deg); /* Standard syntax */
 }
 
 .counter h3{
