--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,15 +80,22 @@ img {
 
 #quote {
 	margin: 80px 10px 10px 10px;
+	height: 100px;
 }
 
 #blanks {
 	margin: 50px 10px;
 	padding: 20px;
 	text-align: center;
+
 	border: 1px dashed black;
 	box-shadow: 0 0 0 3px #E3BC81, 0 0 0 5px black, 0 0 0 10px #E3BC81, 0 0 2px 10px black;
 }
+#blankSpaces {
+	letter-spacing: 5px;
+	font-size: 40px;
+}
+
 
 #remainingGuesses {
 	text-align: center;
